--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 <body>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
   <script src="./bootstrap.js"></script>
-  <canvas id="canvas" height="150" width="150"></canvas>
+  <canvas id="chip8" height="150" width="150"></canvas>
 </body>
 
 </html>
